--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://xeniahuber.netlify.app/
 languageCode: en-us
 title: Xenia the great
-theme: forty
+theme: Shell
 googleAnalytics: ''
 disqusShortname: ''
 params:
@@ -10,7 +10,7 @@ params:
     subtitle: |-
       A RESPONSIVE SITE TEMPLATE DESIGNED BY HTML5 UP
       AND RELEASED UNDER THE CREATIVE COMMONS.
-    title: Hi, my name is Forty
+    title: Hi, my name is Xenia
   blog: {}
   contact:
     address:
