--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://xeniahuber.netlify.app/
 languageCode: en-us
 title: Xenia the great
-theme: forty
+theme: shell
 googleAnalytics: ''
 disqusShortname: ''
 params:
