--- a/config.yaml
+++ b/config.yaml
@@ -16,7 +16,7 @@ params:
     address:
       - city: London
         country: Country
-        street: 
+        street: 88A York Street (W1H1QT)
         title: Address
     buttonClear: Clear
     buttonSend: Send message
@@ -25,7 +25,7 @@ params:
         title: Email
     enable: yes
     phone:
-      - phone: (000) 000-0000 x1234
+      - phone: (0041) 799610660
         title: Phone
   custom_css: []
   custom_js: []
@@ -47,18 +47,18 @@ params:
  #       url: https://www.twitter.com
       - icon: fa-facebook
         label: Facebook
-        url: https://www.facebook.com
+        url: https://www.facebook.com/XeniaHuber
       - icon: fa-instagram
         label: Instagram
         url: https://www.instagram.com/xenia_katharina
       - icon: fa-github
         label: GitHub
-        url: https://www.github.com
+        url: https://www.github.com/LADYEX
       - icon: fa-linkedin
         label: LinkedIn
-        url: https://www.linkedin.com
+        url: https://www.linkedin.com/XeniaHuber
   image: ''
-  name: Your name
+  name: Xenia Huber
   navigation:
     button1:
       - name: Get Started
