--- a/config.yaml
+++ b/config.yaml
@@ -83,7 +83,7 @@ params:
       - image: pic01.jpg
         subtitle: Everything you need to know about me
         title: My Story
-        url: blogs/mystory
+        url: blogs/my_story
       - image: pic02.jpg
         subtitle: Data Analytics & Visualization
         title: Previous Work
