--- a/config.yaml
+++ b/config.yaml
@@ -44,9 +44,9 @@ params:
  #     - icon: fa-twitter
 #        label: Twitter
  #       url: https://www.twitter.com
-      - icon: fa-facebook
-        label: Facebook
-        url: https://www.facebook.com/XeniaHuber
+  #    - icon: fa-facebook
+   #     label: Facebook
+    #    url: https://www.facebook.com/XeniaHuber
       - icon: fa-instagram
         label: Instagram
         url: https://www.instagram.com/xenia_katharina
@@ -59,19 +59,27 @@ params:
   image: ''
   name: Xenia Huber
   navigation:
-    button1:
-      - name: Get Started
-        url: blogs
-    button2:
-      - name: Log In
-        url: '#'
+  #  button1:
+   #   - name: Get Started
+    #    url: blogs
+    #button2:
+     # - name: Log In
+      #  url: '#'
     links:
       - name: Home
-        url: '#'
-      - name: Blogs
-        url: blogs
-      - name: Generic Blog
-        url: blogs/ipsum
+        url
+      - name: My Story
+        url: blogs/my_story
+      - name: My previous Work
+        url: blogs/
+      - name: Women for Women
+        url: blogs/women_for_women
+      - name: ISC Alumni 
+        url: blogs/isc_alumni
+    #  - name: Blogs
+     #   url: blogs
+      #- name: Generic Blog
+       # url: blogs/ipsum
       - name: Elements
         url: elements.html
     menu: Menu
