--- a/config.yaml
+++ b/config.yaml
@@ -111,6 +111,10 @@ params:
         subtitle: Member of the Alumni Committe
         title: ISC Alumni
         url: blogs/isc_alumni
+      - image: mongolia.jpg
+        subtitle: Mind the gap! A multi case study analysis
+        title: Bachelor's Thesis
+        url: blogs/BA_XH_FINAL.pdf
       #- image: pic06.jpg
        # subtitle: Feugiat Amet Tempus
         #title: Etiam
