--- a/config.yaml
+++ b/config.yaml
@@ -111,7 +111,7 @@ params:
         subtitle: Member of the Alumni Committe
         title: ISC Alumni
         url: blogs/isc_alumni
-      - image: mongolia.jpg
+      - image: unisg.jpg
         subtitle: Mind the gap! A multi case study analysis
         title: Bachelor's Thesis
         url: blogs/BA_XH_FINAL.pdf
