--- a/config.yaml
+++ b/config.yaml
@@ -93,7 +93,7 @@ params:
     showcase:
       - image: mongolia.jpg
         subtitle: My Life in a Nutshell
-        title: My Story
+        title: Xenia Katharina Huber
         url: blogs/my_story
       - image: headshot.jpg
         subtitle: Learn about my Professional Experience
