--- a/config.yaml
+++ b/config.yaml
@@ -106,7 +106,7 @@ params:
       - image: w4wlogo.jpg
         subtitle: Head of Community
         title: Women for Women (1-on-1 Mentoring)
-        url: women for women
+        url: women for women/women for women
       - image: alumnilogo.jpg
         subtitle: Member of the Alumni Committe
         title: ISC Alumni
