--- a/config.yaml
+++ b/config.yaml
@@ -88,6 +88,17 @@ params:
     menu: Menu
     #subtitle: By HTML5 Up
     title: Home
+  two:
+    buttonText: Get Started
+    enable: yes
+   # subtitle: "Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero.
+    #  \r\n    Mauris aliquet magna magna sed nunc rhoncus pharetra. \r\n    Pellentesque
+     # condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia
+    #  pellentesque lorem ipsum dolor. \r\n    Nullam et orci eu lorem consequat tincidunt.
+     # Vivamus et sagittis libero.\r\n    Mauris aliquet magna magna sed nunc rhoncus
+    #  amet pharetra et feugiat tempus."
+    title: My Life in a Nutshell
+    url: blogs
   tiles:
     enable: yes
     showcase:
@@ -106,27 +117,27 @@ params:
       - image: w4wlogo.jpg
         subtitle: Head of Community
         title: Women for Women (1-on-1 Mentoring)
-        url: blogs/women_for_women
+        url: projects/women_for_women
       - image: alumnilogo.jpg
         subtitle: Member of the Alumni Committe
         title: ISC Alumni
-        url: blogs/isc_alumni
+        url: projects/isc_alumni
       - image: unisg.jpg
         subtitle: Mind the gap! A multi case study analysis
         title: Bachelor's Thesis
         url: blogs/Thesis.pdf
-      #- image: pic06.jpg
-       # subtitle: Feugiat Amet Tempus
-        #title: Etiam
-        #url: blogs/ipsum
-  two:
-    buttonText: Get Started
-    enable: yes
-   # subtitle: "Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero.
-    #  \r\n    Mauris aliquet magna magna sed nunc rhoncus pharetra. \r\n    Pellentesque
-     # condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia
-    #  pellentesque lorem ipsum dolor. \r\n    Nullam et orci eu lorem consequat tincidunt.
-     # Vivamus et sagittis libero.\r\n    Mauris aliquet magna magna sed nunc rhoncus
-    #  amet pharetra et feugiat tempus."
-    title: My Life in a Nutshell
-    url: blogs
+      - image: pic06.jpg
+        subtitle: Feugiat Amet Tempus
+        title: Etiam
+        url: blogs
+  # two:
+  #   buttonText: Get Started
+  #   enable: yes
+  #  # subtitle: "Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero.
+  #   #  \r\n    Mauris aliquet magna magna sed nunc rhoncus pharetra. \r\n    Pellentesque
+  #    # condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia
+  #   #  pellentesque lorem ipsum dolor. \r\n    Nullam et orci eu lorem consequat tincidunt.
+  #    # Vivamus et sagittis libero.\r\n    Mauris aliquet magna magna sed nunc rhoncus
+  #   #  amet pharetra et feugiat tempus."
+  #   title: My Life in a Nutshell
+  #   url: blogs
