--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,7 @@ params:
     buttonText: Get Started
     subtitle: |-
       LEARN ABOUT MY LIFE & GET IN TOUCH
-    title: HELLO STRANGER, WELCOME TO MY WORLD
+    title: HELLO STRANGER, WELCOME TO XENIA'S WORLD
     image: 'banner.jpg'
   blog: {}
   contact:
